Fix rendering issues on Safari
This fixes the taxitor being centred vertically but resizing to try and
fill all the vertical space - it should be vertically at the top.

This also fixes the taxitor text not showing due to the foreign object
missing some attributes. Overflow is used to avoid finding them in code.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,11 +6,15 @@ body {
 button.taxtton {
   padding: 5px;
   background-color: #00823B;
-  margin: 5px 5px 5px 0;
+  margin: 5px 0 5px 0;
   font-size: inherit;
   color: inherit;
   border: none;
   cursor: hand;
+}
+
+button.taxtton+button.taxtton {
+  margin-left: 5px;
 }
 
 button.taxtton:hover {
@@ -55,6 +59,7 @@ button.taxtton.selected {
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 1px;
+  width: 100px;
 }
 
 .taxitor .node rect {
